Fixed footer flickering on load

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -216,3 +216,7 @@ ul.features-list li {
 		width: 100%;
 	}
 }
+
+.footer {
+  visibility: hidden;
+}
